--- a/2_docker_sql/DockerFile
+++ b/2_docker_sql/DockerFile
@@ -2,7 +2,4 @@ FROM python:3.12
 
 RUN pip install pandas
 
-WORKDIR /app
-COPY pipeline.py pipeline.py
-
-ENTRYPOINT ["python",  "pipeline.py"]
+ENTRYPOINT [ "bash" ]
